utils/pgadmin/manifests/k8s-pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    name: pgadmin
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: pgadmin
  type: ClusterIP
